[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Advent of code 2023"
authors = ["Kasper Wendel <kasperwendel@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
