[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Advent of code 2023"
authors = ["Kasper Wendel <kasperwendel@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
numpy = "^1.26.2"
poethepoet = "^0.24.4"
tqdm = "^4.66.1"

[tool.poe.tasks]
create_day = """
touch day_${DAY}.py data/day_${DAY}.txt data/day_${DAY}_example.txt
"""


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
